# Fin-Agent

./: .env.example  .gitignore  AGENTS.md  DESIGN-TECH.md  DESIGN-USER.md  DESIGN.md  DesigndocS1.md  LICENSE  README.md
py/: pyproject.toml
py/fin_agent/: __init__.py  cli.py
py/fin_agent/analysis/: deep_dive.py  preflight.py  tuning.py
py/fin_agent/api/: app.py
py/fin_agent/backtest/: compare.py  metrics.py  models.py  runner.py
py/fin_agent/code_strategy/: __init__.py  (+4 more)
py/tests/: test_agent_decides.py  test_agentic_tool_surface.py  test_api_e2e.py  test_backtest_compare.py  test_chat_bridge_agentic_prompt.py  test_code_strategy.py  test_code_strategy_analysis.py  test_code_strategy_backtest.py  test_diagnostics_readiness.py  test_importer.py  test_kite_api.py  test_kite_integration.py  test_kite_market_api.py  test_live_and_visualization.py  test_npm_package_readiness.py  test_observability.py  test_opencode_agent_integration.py  test_opencode_auth.py  test_opencode_auth_integration.py  test_opencode_serve_script.py  test_operator_scripts.py  test_preflight_extended.py  test_publish_readiness_script.py  test_release_packaging.py  test_rigorous_e2e_script.py  test_rigorous_ui_dashboard.py  test_screener_api.py  test_security_hardening.py  test_seed_web_e2e_script.py  test_session_rehydrate.py  test_sqlite_oauth.py  test_stage1_data_entities.py  test_tax_overlay.py  test_tax_overlay_extended.py  test_tracer_flow.py  test_tuning_and_analysis.py  test_tuning_api.py  test_tuning_storage.py  test_ui_history_endpoints.py  test_visual_regression_artifacts.py  (+6 more)
(+98 files in other folders)
