[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fin-agent"
version = "0.1.0"
description = "Stage-1 agent-first finance backend"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=45.0.0",
  "duckdb>=1.4.0",
  "fastapi>=0.131.0",
  "pydantic>=2.12.0",
  "uvicorn>=0.41.0"
]

[project.scripts]
fin-agent = "fin_agent.cli:main"
